tests/baselines/reference/typesVersionsDeclarationEmit.multiFileBackReferenceToSelf.errors.txt
main.ts(1,10): error TS2305: Module '"ext"' has no exported member 'fa'.


==== tsconfig.json (0 errors) ====
    {}
==== main.ts (1 errors) ====
    import { fa } from "ext";
             ~~
!!! error TS2305: Module '"ext"' has no exported member 'fa'.
    import { fb } from "ext/other";
    
    export const va = fa();
    export const vb = fb();
    
==== node_modules/ext/package.json (0 errors) ====
    {
        "name": "ext",
        "version": "1.0.0",
        "types": "index",
        "typesVersions": {
            ">=3.1.0-0": { "*" : ["ts3.1/*"] }
        }
    }
    
==== node_modules/ext/index.d.ts (0 errors) ====
    export interface A {}
    export function fa(): A;
    
==== node_modules/ext/other.d.ts (0 errors) ====
    export interface B {}
    export function fb(): B;
    
==== node_modules/ext/ts3.1/index.d.ts (0 errors) ====
    export * from "../";
    
==== node_modules/ext/ts3.1/other.d.ts (0 errors) ====
    export * from "../other";
    